--- a/style.css
+++ b/style.css
@@ -3,8 +3,31 @@
   flex-wrap: wrap;
   height: 300px;
   width: 400px;
+  box-shadow: 5px 5px 5px gray;  
+  border-radius: 5px;
+}
+
+.grid img {
+  width: 100px;
+  box-sizing: border-box;  
+  border: 1px solid white;  
+  border-radius: 5px;
+}
+
+h3 {
+  font-size: 2rem;
+  text-shadow: 4px 4px 5px gray;
 }
 
 body {
   background-color: beige;
+  display: flex;
+  justify-content: center;
+  align-items: center;      
+  height: 100%;
+  margin: 0;
+}
+
+html {
+  height: 100%;
 }
